--- a/template_basic/index.html
+++ b/template_basic/index.html
@@ -106,41 +106,43 @@
 			<pre class="prettyprint language-json" data-type="json"><code>{{{content}}}</code></pre>
 		{{/each}}
 
-		{{subTemplate "article-param-block" params=article.parameter _title="Parameter" _hasType=_hasTypeInParameterFields}}
-		{{subTemplate "article-param-block" params=article.success _title="Success (200)" _hasType=_hasTypeInSuccessFields}}
-		{{subTemplate "article-param-block" params=article.error _title="Error (4xx)" _col1="Name" _hasType=_hasTypeInErrorFields}}
+		{{subTemplate "article-param-block" params=article.parameter _hasType=_hasTypeInParameterFields}}
+		{{subTemplate "article-param-block" params=article.success _hasType=_hasTypeInSuccessFields}}
+		{{subTemplate "article-param-block" params=article.info _hasType=_hasTypeInInfoFields}}
+		{{subTemplate "article-param-block" params=article.error _col1="Name" _hasType=_hasTypeInErrorFields}}
 	</article>
 </script>
 
 <script id="template-article-param-block" type="text/x-handlebars-template">
 	{{#if params}}
-		<h2>{{__ _title}}</h2>
-		{{#if params.fields}}
+		{{#each params.fields}}
+			<h2>{{__ @key}}</h2>
 			<table>
 				<thead>
 					<tr>
 						<th style="width: 30%">{{#if _col1}}{{__ _col1}}{{else}}{{__ "Field"}}{{/if}}</th>
-						{{#if _hasType}}<th style="width: 10%">{{__ "Type"}}</th>{{/if}}
+						{{#if ../_hasType}}<th style="width: 10%">{{__ "Type"}}</th>{{/if}}
 						<th style="width: {{#if _hasType}}60%{{else}}70%{{/if}}">{{__ "Description"}}</th>
 					</tr>
 				</thead>
 				<tbody>
-			{{#each params.fields}}
+			{{#each this}}
 					<tr>
 						<td class="code">{{{splitFill field "." "&nbsp;&nbsp;"}}}{{#if optional}} <span class="label label-optional">{{__ "optional"}}</span>{{/if}}</td>
 						{{#if ../../_hasType}}<td>{{{type}}}</td>{{/if}}
-						<td>{{{nl2br description}}}</td>
+					<td>
+					  {{{nl2br description}}}
+						{{#if defaultValue}}<p class="default-value">{{__ "Default value:"}} <code>{{{defaultValue}}}</code></p>{{/if}}
+					</td>
 					</tr>
 			{{/each}}
 				</tbody>
 			</table>
-		{{else}}
-			<p>{{__ "No response values."}}</p>
-		{{/if}}
 
-		{{#each params.examples}}
-			<strong>{{title}}</strong>
-			<pre class="prettyprint language-json" data-type="json"><code>{{{content}}}</code></pre>
+			{{#each params.examples}}
+				<strong>{{title}}</strong>
+				<pre class="prettyprint language-json" data-type="json"><code>{{{content}}}</code></pre>
+			{{/each}}
 		{{/each}}
 	{{/if}}
 </script>
