--- a/template-single/index.html
+++ b/template-single/index.html
@@ -191,9 +191,9 @@
       <thead>
         <tr>
           <th style="width: 30%">{{#if ../_col1}}{{__ ../_col1}}{{else}}{{__ "Field"}}{{/if}}</th>
-          {{#if_neq this.Type compare=null}}
+          {{#unless this.Type compare=null}}
             <th style="width: 10%">{{__ "Type"}}</th>
-          {{/if_neq}}
+          {{/unless}}
           <th style="width: {{#if ../_hasType}}60%{{else}}70%{{/if}}">{{__ "Description"}}</th>
         </tr>
       </thead>
@@ -201,9 +201,9 @@
         {{#each params}}
           <tr>
             <td class="code">{{this.field}}</td>
-            {{#if_neq this.Type compare=null}}
+            {{#unless this.Type compare=null}}
               <td>{{this.type}}</td>
-            {{/if_neq}}
+            {{/unless}}
             <td>{{{nl2br this.description}}}</td>
           </tr>
         {{/each}}
@@ -219,9 +219,9 @@
       <thead>
         <tr>
           <th style="width: 30%">{{#if ../_col1}}{{__ ../_col1}}{{else}}{{__ "Field"}}{{/if}}</th>
-          {{#if_neq this.Type compare=null}}
+          {{#unless this.Type compare=null}}
             <th style="width: 10%">{{__ "Type"}}</th>
-          {{/if_neq}}
+          {{/unless}}
           <th style="width: {{#if ../_hasType}}60%{{else}}70%{{/if}}">{{__ "Description"}}</th>
         </tr>
       </thead>
@@ -229,9 +229,9 @@
         {{#each params}}
           <tr>
             <td class="code">{{this.field}}</td>
-            {{#if_neq this.Type compare=null}}
+            {{#unless this.Type compare=null}}
               <td>{{this.type}}</td>
-            {{/if_neq}}
+            {{/unless}}
             <td>
               {{{nl2br this.description}}}
               {{#if defaultValue}}
